# demo-bankid

./: Cargo.toml  Dockerfile  LICENSE.md  README.md
cert/test/: bankid.crt
src/: main.rs
src/aws/: mod.rs
