[package]
name = "demobankid"
version = "0.1.0"
authors = ["Björn Molin <bjorn.molin@motrice.se>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

required-features = ["json"]

[dependencies]
pretty_env_logger = "0.3"
reqwest = {git="https://github.com/seanmonstar/reqwest", features = ["json"]}
tokio = "=0.2.0-alpha.6"
serde = { version = "1.0", features = ["derive"] }
serde_derive = "1.0"
serde_json = {version="1.0", optional = true}
hyper = "0.13.0-alpha.4"
qrcode = "0.11"
image = "0.22"
base64 = "0.10"
rusoto_core = "0.41"
rusoto_credential = "0.41"
rusoto_s3 = "0.41"
futures = "0.1"
uuid = { version = "0.8.1", features = ["serde", "v4"] }    
bankid-rs = {git="https://github.com/motrice/bankid-rs"}
url = "2.1"
querystring= "1.1"

[features]
json = ["serde_json"]